default/objects/pq_Condition__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>