default/objects/pq_Condition__c/fields/Parent_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Id__c</fullName>
    <label>Parent Object Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>