default/objects/pq_Condition__c/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <label>Parent Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>